--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.5",
     "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
