--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@devnomic/marquee": "^1.0.2",
+    "@zegocloud/zego-uikit-prebuilt": "^2.13.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
     "framer-motion": "^11.13.5",
+    "install": "^0.13.0",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
+    "npm": "^10.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
@@ -26,7 +29,8 @@
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
